--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -39,7 +39,7 @@
                 android:layout_width="225dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:backgroundTint="#FF0000"
+                android:backgroundTint="@color/yellow"
                 android:text="Add Event"
 
                 app:layout_constraintTop_toBottomOf="@+id/datePicker" />
