--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -15,6 +15,16 @@
         tools:layout_editor_absoluteX="176dp"
         tools:layout_editor_absoluteY="16dp" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Friend List "
+        android:textStyle="bold"
+        android:textSize="25dp"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="54dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
